feat: add image, audio, video sections with format examples and enhance styling for better layout

--- a/index.html
+++ b/index.html
@@ -25,7 +25,16 @@
       <div class="nav" id="nav">
         <a href="#home">Home</a>
         <a href="#about">About</a>
-        <a href="#akademic">Akademic</a>
+        <li class="dropdown">
+          <a href="#">Akademik</a>
+          <ul class="dropdown-menu">
+            <li><a href="font.html">Font</a></li>
+            <li><a href="#image">Gambar</a></li>
+            <li><a href="#audio">Audio</a></li>
+            <li><a href="#video">Video</a></li>
+            <li><a href="#animasi">Animasi</a></li>
+          </ul>
+        </li>        
         <a href="#contact">Contact</a>
       </div>
     </nav>
@@ -130,386 +139,9 @@
           </div>
         </div>
       </div>
-
-      <section class="akademic-font" id="akademic-font">
-        <h2>Eksplorasi Gaya Font</h2>
-        <p class="section-subtitle">
-          Berikut adalah beberapa jenis font yang umum digunakan dalam desain
-          dan tipografi.
-        </p>
-
-        <div class="font-card-container">
-          <div class="font-card" style="font-family: serif">
-            <p>Ini adalah contoh teks dengan berbagai macam font</p>
-            <h3>Serif</h3>
-          </div>
-
-          <div class="font-card" style="font-family: cursive">
-            <p>Ini adalah contoh teks dengan berbagai macam font</p>
-            <h3>Script (Cursive)</h3>
-          </div>
-
-          <div class="font-card" style="font-family: 'Impact', fantasy">
-            <p>Ini adalah contoh teks dengan berbagai macam font</p>
-            <h3>Display</h3>
-          </div>
-
-          <div class="font-card" style="font-family: monospace">
-            <p>Ini adalah contoh teks dengan berbagai macam font</p>
-            <h3>Monospace</h3>
-          </div>
-
-          <div class="font-card" style="font-family: fantasy">
-            <p>Ini adalah contoh teks dengan berbagai macam font</p>
-            <h3>Decorative</h3>
-          </div>
-
-          <div class="font-card" style="font-family: 'UnifrakturCook', cursive">
-            <p>Ini adalah contoh teks dengan berbagai macam font</p>
-            <h3>Blackletter</h3>
-          </div>
-
-          <div class="font-card" style="font-family: 'Helvetica', sans-serif">
-            <p>Ini adalah contoh teks dengan berbagai macam font</p>
-            <h3>Helvetica</h3>
-          </div>
-
-          <div class="font-card" style="font-family: 'Garamond', serif">
-            <p>Ini adalah contoh teks dengan berbagai macam font</p>
-            <h3>Garamond</h3>
-          </div>
-
-          <div class="font-card" style="font-family: 'Georgia', serif">
-            <p>Ini adalah contoh teks dengan berbagai macam font</p>
-            <h3>Georgia</h3>
-          </div>
-
-          <div class="font-card" style="font-family: 'Comic Sans MS', cursive">
-            <p>Ini adalah contoh teks dengan berbagai macam font</p>
-            <h3>Rounded</h3>
-          </div>
-        </div>
-      </section>
-
-      <section class="image-gallery" id="gallery">
-        <h2>10 Format Gambar</h2>
-        <p class="section-subtitle">
-          Berikut adalah contoh 10 format gambar populer:
-        </p>
-
-        <div class="image-grid">
-          <div class="image-card">
-            <img src="images/Gambar1.jpg" alt="JPEG" />
-            <p>JPEG</p>
-          </div>
-          <div class="image-card">
-            <img src="images/Gambar1.png" alt="PNG" />
-            <p>PNG</p>
-          </div>
-          <div class="image-card">
-            <img src="images/Gambar1.webp" alt="WebP" />
-            <p>WebP</p>
-          </div>
-          <div class="image-card">
-            <img src="images/Gambar.gif" alt="GIF" />
-            <p>GIF</p>
-          </div>
-          <div class="image-card">
-            <img src="images/Gambar1.svg" alt="SVG" />
-            <p>SVG</p>
-          </div>
-          <div class="image-card">
-            <img src="images/Gambar1.avif" alt="AVIF" />
-            <p>AVIF</p>
-          </div>
-          <div class="image-card">
-            <img src="images/Gambar1.bmp" alt="BMP" />
-            <p>BMP</p>
-          </div>
-          <div class="image-card">
-            <img src="images/Gambar1.ico" alt="ICO" />
-            <p>ICO</p>
-          </div>
-          <div class="image-card">
-            <img src="images/Gambar1.heic" alt="HEIC" />
-            <p>HEIC</p>
-          </div>
-          <div class="image-card">
-            <img src="images/Gambar1.tiff" alt="TIFF" />
-            <p>TIFF</p>
-          </div>
-        </div>
-      </section>
-
-      <section id="akademik">
-        <h2>10 Format Audio</h2>
-        <div class="audio-cards">
-          <div class="audio-card">
-            <h3>MP3</h3>
-            <audio controls>
-              <source src="audio/sempurna.mp3" type="audio/mpeg" />
-              Browser kamu tidak mendukung pemutar audio.
-            </audio>
-          </div>
-          <div class="audio-card">
-            <h3>WAV</h3>
-            <audio controls>
-              <source src="audio/sempurna.wav" type="audio/wav" />
-              Browser kamu tidak mendukung pemutar audio.
-            </audio>
-          </div>
-          <div class="audio-card">
-            <h3>FLAC</h3>
-            <audio controls>
-              <source src="audio/sempurna.flac" type="audio/flac" />
-              Browser kamu tidak mendukung pemutar audio.
-            </audio>
-          </div>
-          <div class="audio-card">
-            <h3>AAC</h3>
-            <audio controls>
-              <source src="audio/sempurna.aac" type="audio/aac" />
-              Browser kamu tidak mendukung pemutar audio.
-            </audio>
-          </div>
-          <div class="audio-card">
-            <h3>ALAC</h3>
-            <audio controls>
-              <source src="audio/sempurna.m4a" type="audio/alac" />
-              Browser kamu tidak mendukung pemutar audio.
-            </audio>
-          </div>
-          <div class="audio-card">
-            <h3>MKA</h3>
-            <audio controls>
-              <source src="audio/sempurna.mka" type="audio/x-ms-mka" />
-              Browser kamu tidak mendukung pemutar audio.
-            </audio>
-          </div>
-          <div class="audio-card">
-            <h3>AIFF</h3>
-            <audio controls>
-              <source src="audio/sempurna.aiff" type="audio/aiff" />
-              Browser kamu tidak mendukung pemutar audio.
-            </audio>
-          </div>
-          <div class="audio-card">
-            <h3>OGG</h3>
-            <audio controls>
-              <source src="audio/sempurna.ogg" type="audio/ogg" />
-              Browser kamu tidak mendukung pemutar audio.
-            </audio>
-          </div>
-          <div class="audio-card">
-            <h3>AMR</h3>
-            <audio controls>
-              <source src="audio/sempurna.amr" type="audio/amr" />
-              Browser kamu tidak mendukung pemutar audio.
-            </audio>
-          </div>
-          <div class="audio-card">
-            <h3>OPUS</h3>
-            <audio controls>
-              <source src="audio/sempurna.opus" type="audio/opus" />
-              Browser kamu tidak mendukung pemutar audio.
-            </audio>
-          </div>
-        </div>
-      </section>
-
-      <section id="akademik-video">
-        <h2 class="section-title-akademik">10 Format Video</h2>
-        <div class="video-cards">
-          <div class="video-card">
-            <h3>MP4</h3>
-            <video autoplay muted loop>
-              <source src="video/Coding.mp4" type="video/mp4" />
-              Browser kamu tidak mendukung video.
-            </video>
-          </div>
-          <div class="video-card">
-            <h3>WEBM</h3>
-            <video autoplay muted loop>
-              <source src="video/Coding.webm" type="video/webm" />
-              Browser kamu tidak mendukung video.
-            </video>
-          </div>
-          <div class="video-card">
-            <h3>M4V</h3>
-            <video autoplay muted loop>
-              <source src="video/Coding.m4v" type="video/x-m4v" />
-              Browser kamu tidak mendukung video.
-            </video>
-          </div>
-          <div class="video-card">
-            <h3>OGV</h3>
-            <video controls>
-              <source src="video/Coding.ogv" type="video/ogg" />
-              Browser kamu tidak mendukung video.
-            </video>
-          </div>
-          <div class="video-card">
-            <h3>AVI</h3>
-            <video autoplay muted loop>
-              <source src="video/Coding.avi" type="video/x-msvideo" />
-              Browser kamu tidak mendukung video.
-            </video>
-          </div>
-          <div class="video-card">
-            <h3>MKV</h3>
-            <video autoplay muted loop>
-              <source src="video/Coding.mkv" type="video/x-matroska" />
-              Browser kamu tidak mendukung video.
-            </video>
-          </div>
-          <div class="video-card">
-            <h3>MOV</h3>
-            <video autoplay muted loop>
-              <source src="video/Coding.mov" type="video/quicktime" />
-              Browser kamu tidak mendukung video.
-            </video>
-          </div>
-          <div class="video-card">
-            <h3>WMV</h3>
-            <video autoplay muted loop>
-              <source src="video/Coding.wmv" type="video/x-ms-wmv" />
-              Browser kamu tidak mendukung video.
-            </video>
-          </div>
-          <div class="video-card">
-            <h3>FLV</h3>
-            <video autoplay muted loop>
-              <source src="video/Coding.flv" type="video/x-flv" />
-              Browser kamu tidak mendukung video.
-            </video>
-          </div>
-          <div class="video-card">
-            <h3>3GP</h3>
-            <video autoplay muted loop>
-              <source src="video/Coding.3gp" type="video/3gpp" />
-              Browser kamu tidak mendukung video.
-            </video>
-          </div>
-        </div>
-      </section>
-
-      <section class="animation-section">
-        <h2>Jenis Animasi Pupuler</h2>
-        <div class="animation-cards">
-          <div class="card">
-            <video autoplay muted loop>
-              <source src="video/Animasi 2d.mp4" type="video/mp4" />
-              Your browser does not support the video tag.
-            </video>
-            <h3>Animasi 2D</h3>
-            <p>
-              Animasi berbasis dua dimensi yang umum digunakan pada kartun
-              klasik dan aplikasi digital modern.
-            </p>
-          </div>
-          <div class="card">
-            <video autoplay muted loop>
-              <source src="video/3d.mp4" type="video/mp4" />
-              Your browser does not support the video tag.
-            </video>
-            <h3>Animasi 3D</h3>
-            <p>
-              Animasi tiga dimensi dengan objek yang terlihat nyata, biasa
-              digunakan dalam film, game, dan simulasi.
-            </p>
-          </div>
-          <div class="card">
-            <video autoplay muted loop>
-              <source src="video/motion.mp4" type="video/mp4" />
-              Your browser does not support the video tag.
-            </video>
-            <h3>Motion Graphic</h3>
-            <p>
-              Animasi grafis seperti teks dan elemen desain yang bergerak untuk
-              presentasi, video marketing, dll.
-            </p>
-          </div>
-          <div class="card">
-            <video autoplay muted loop>
-              <source src="video/stopmotion.mp4" type="video/mp4" />
-              Your browser does not support the video tag.
-            </video>
-            <h3>Stop Motion</h3>
-            <p>
-              Animasi yang dibuat dari foto objek nyata yang digerakkan sedikit
-              demi sedikit di setiap frame.
-            </p>
-          </div>
-          <div class="card">
-            <video autoplay muted loop>
-              <source src="video/whiteboard.mp4" type="video/mp4" />
-              Your browser does not support the video tag.
-            </video>
-            <h3>Whiteboard Animation</h3>
-            <p>
-              Jenis animasi yang menyerupai gambar tangan di papan tulis, sering
-              digunakan untuk edukasi.
-            </p>
-          </div>
-          <div class="card">
-            <video autoplay muted loop>
-              <source src="video/rotoscope.mp4" type="video/mp4" />
-              Your browser does not support the video tag.
-            </video>
-            <h3>Rotoscope</h3>
-            <p>
-              Teknik mengubah video live-action menjadi animasi dengan
-              menggambar ulang frame demi frame.
-            </p>
-          </div>
-          <div class="card">
-            <video autoplay muted loop>
-              <source src="video/cutout.mp4" >
-              Your browser does not support the video tag.
-            </video>
-            <h3>Cut-Out Animation</h3>
-            <p>
-              Animasi yang menggunakan potongan gambar atau objek seperti kertas
-              yang digerakkan.
-            </p>
-          </div>
-          <div class="card">
-            <video autoplay muted loop>
-              <source src="video/infographic.mp4" type="video/mp4" />
-              Your browser does not support the video tag.
-            </video>
-            <h3>Infographic Animation</h3>
-            <p>
-              Gabungan visual data dan grafik bergerak untuk menyampaikan
-              informasi dengan menarik dan jelas.
-            </p>
-          </div>
-          <div class="card">
-            <video autoplay muted loop>
-              <source src="video/kinetic.mp4" />
-              Your browser does not support the video tag.
-            </video>
-            <h3>Kinetic Typography</h3>
-            <p>
-              Animasi teks yang bergerak dinamis, sering digunakan dalam iklan,
-              video lirik, atau pembuka film.
-            </p>
-          </div>
-          <div class="card">
-            <video autoplay muted loop>
-              <source src="video/interactive.mp4" type="video/mp4" />
-              Your browser does not support the video tag.
-            </video>
-            <h3>Interactive Animation</h3>
-            <p>
-              Interaktif animasi adalah animasi yang merespons aksi pengguna
-              (seperti klik, hover, atau scroll) untuk menciptakan pengalaman
-              visual yang lebih menarik dan dinamis.
-            </p>
-          </div>
-        </div>
-      </section>
     </section>
+
+    
 
     <!-- Contact Section -->
     <section class="contact" id="contact">
