feat: update HTML structure for audio and image pages, add external font and icon styles

--- a/animasi.html
+++ b/animasi.html
@@ -1,117 +1,131 @@
-<section class="animation-section">
-    <h2>Jenis Animasi Pupuler</h2>
-    <div class="animation-cards">
-      <div class="card">
-        <video autoplay muted loop>
-          <source src="video/Animasi 2d.mp4" type="video/mp4" />
-          Your browser does not support the video tag.
-        </video>
-        <h3>Animasi 2D</h3>
-        <p>
-          Animasi berbasis dua dimensi yang umum digunakan pada kartun
-          klasik dan aplikasi digital modern.
-        </p>
-      </div>
-      <div class="card">
-        <video autoplay muted loop>
-          <source src="video/3d.mp4" type="video/mp4" />
-          Your browser does not support the video tag.
-        </video>
-        <h3>Animasi 3D</h3>
-        <p>
-          Animasi tiga dimensi dengan objek yang terlihat nyata, biasa
-          digunakan dalam film, game, dan simulasi.
-        </p>
-      </div>
-      <div class="card">
-        <video autoplay muted loop>
-          <source src="video/motion.mp4" type="video/mp4" />
-          Your browser does not support the video tag.
-        </video>
-        <h3>Motion Graphic</h3>
-        <p>
-          Animasi grafis seperti teks dan elemen desain yang bergerak untuk
-          presentasi, video marketing, dll.
-        </p>
-      </div>
-      <div class="card">
-        <video autoplay muted loop>
-          <source src="video/stopmotion.mp4" type="video/mp4" />
-          Your browser does not support the video tag.
-        </video>
-        <h3>Stop Motion</h3>
-        <p>
-          Animasi yang dibuat dari foto objek nyata yang digerakkan sedikit
-          demi sedikit di setiap frame.
-        </p>
-      </div>
-      <div class="card">
-        <video autoplay muted loop>
-          <source src="video/whiteboard.mp4" type="video/mp4" />
-          Your browser does not support the video tag.
-        </video>
-        <h3>Whiteboard Animation</h3>
-        <p>
-          Jenis animasi yang menyerupai gambar tangan di papan tulis, sering
-          digunakan untuk edukasi.
-        </p>
-      </div>
-      <div class="card">
-        <video autoplay muted loop>
-          <source src="video/rotoscope.mp4" type="video/mp4" />
-          Your browser does not support the video tag.
-        </video>
-        <h3>Rotoscope</h3>
-        <p>
-          Teknik mengubah video live-action menjadi animasi dengan
-          menggambar ulang frame demi frame.
-        </p>
-      </div>
-      <div class="card">
-        <video autoplay muted loop>
-          <source src="video/cutout.mp4" >
-          Your browser does not support the video tag.
-        </video>
-        <h3>Cut-Out Animation</h3>
-        <p>
-          Animasi yang menggunakan potongan gambar atau objek seperti kertas
-          yang digerakkan.
-        </p>
-      </div>
-      <div class="card">
-        <video autoplay muted loop>
-          <source src="video/infographic.mp4" type="video/mp4" />
-          Your browser does not support the video tag.
-        </video>
-        <h3>Infographic Animation</h3>
-        <p>
-          Gabungan visual data dan grafik bergerak untuk menyampaikan
-          informasi dengan menarik dan jelas.
-        </p>
-      </div>
-      <div class="card">
-        <video autoplay muted loop>
-          <source src="video/kinetic.mp4" />
-          Your browser does not support the video tag.
-        </video>
-        <h3>Kinetic Typography</h3>
-        <p>
-          Animasi teks yang bergerak dinamis, sering digunakan dalam iklan,
-          video lirik, atau pembuka film.
-        </p>
-      </div>
-      <div class="card">
-        <video autoplay muted loop>
-          <source src="video/interactive.mp4" type="video/mp4" />
-          Your browser does not support the video tag.
-        </video>
-        <h3>Interactive Animation</h3>
-        <p>
-          Interaktif animasi adalah animasi yang merespons aksi pengguna
-          (seperti klik, hover, atau scroll) untuk menciptakan pengalaman
-          visual yang lebih menarik dan dinamis.
-        </p>
-      </div>
-    </div>
-  </section>
-</section>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Animasi</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <button onclick="window.location.href='index.html'" class="btn-kembali">
+        ← Kembali ke Halaman Utama
+    </button>
+    <section class="animation-section">
+        <h2>Jenis Animasi Pupuler</h2>
+        <div class="animation-cards">
+          <div class="card">
+            <video autoplay muted loop>
+              <source src="video/Animasi 2d.mp4" type="video/mp4" />
+              Your browser does not support the video tag.
+            </video>
+            <h3>Animasi 2D</h3>
+            <p>
+              Animasi berbasis dua dimensi yang umum digunakan pada kartun
+              klasik dan aplikasi digital modern.
+            </p>
+          </div>
+          <div class="card">
+            <video autoplay muted loop>
+              <source src="video/3d.mp4" type="video/mp4" />
+              Your browser does not support the video tag.
+            </video>
+            <h3>Animasi 3D</h3>
+            <p>
+              Animasi tiga dimensi dengan objek yang terlihat nyata, biasa
+              digunakan dalam film, game, dan simulasi.
+            </p>
+          </div>
+          <div class="card">
+            <video autoplay muted loop>
+              <source src="video/motion.mp4" type="video/mp4" />
+              Your browser does not support the video tag.
+            </video>
+            <h3>Motion Graphic</h3>
+            <p>
+              Animasi grafis seperti teks dan elemen desain yang bergerak untuk
+              presentasi, video marketing, dll.
+            </p>
+          </div>
+          <div class="card">
+            <video autoplay muted loop>
+              <source src="video/stopmotion.mp4" type="video/mp4" />
+              Your browser does not support the video tag.
+            </video>
+            <h3>Stop Motion</h3>
+            <p>
+              Animasi yang dibuat dari foto objek nyata yang digerakkan sedikit
+              demi sedikit di setiap frame.
+            </p>
+          </div>
+          <div class="card">
+            <video autoplay muted loop>
+              <source src="video/whiteboard.mp4" type="video/mp4" />
+              Your browser does not support the video tag.
+            </video>
+            <h3>Whiteboard Animation</h3>
+            <p>
+              Jenis animasi yang menyerupai gambar tangan di papan tulis, sering
+              digunakan untuk edukasi.
+            </p>
+          </div>
+          <div class="card">
+            <video autoplay muted loop>
+              <source src="video/rotoscope.mp4" type="video/mp4" />
+              Your browser does not support the video tag.
+            </video>
+            <h3>Rotoscope</h3>
+            <p>
+              Teknik mengubah video live-action menjadi animasi dengan
+              menggambar ulang frame demi frame.
+            </p>
+          </div>
+          <div class="card">
+            <video autoplay muted loop>
+              <source src="video/cutout.mp4" >
+              Your browser does not support the video tag.
+            </video>
+            <h3>Cut-Out Animation</h3>
+            <p>
+              Animasi yang menggunakan potongan gambar atau objek seperti kertas
+              yang digerakkan.
+            </p>
+          </div>
+          <div class="card">
+            <video autoplay muted loop>
+              <source src="video/infographic.mp4" type="video/mp4" />
+              Your browser does not support the video tag.
+            </video>
+            <h3>Infographic Animation</h3>
+            <p>
+              Gabungan visual data dan grafik bergerak untuk menyampaikan
+              informasi dengan menarik dan jelas.
+            </p>
+          </div>
+          <div class="card">
+            <video autoplay muted loop>
+              <source src="video/kinetic.mp4" />
+              Your browser does not support the video tag.
+            </video>
+            <h3>Kinetic Typography</h3>
+            <p>
+              Animasi teks yang bergerak dinamis, sering digunakan dalam iklan,
+              video lirik, atau pembuka film.
+            </p>
+          </div>
+          <div class="card">
+            <video autoplay muted loop>
+              <source src="video/interactive.mp4" type="video/mp4" />
+              Your browser does not support the video tag.
+            </video>
+            <h3>Interactive Animation</h3>
+            <p>
+              Interaktif animasi adalah animasi yang merespons aksi pengguna
+              (seperti klik, hover, atau scroll) untuk menciptakan pengalaman
+              visual yang lebih menarik dan dinamis.
+            </p>
+          </div>
+        </div>
+      </section>
+    </section>
+</body>
+</html>
