--- a/audio.html
+++ b/audio.html
@@ -1,76 +1,89 @@
-
-<section id="akademik">
-    <h2>10 Format Audio</h2>
-    <div class="audio-cards">
-      <div class="audio-card">
-        <h3>MP3</h3>
-        <audio controls>
-          <source src="audio/sempurna.mp3" type="audio/mpeg" />
-          Browser kamu tidak mendukung pemutar audio.
-        </audio>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Audio</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <button onclick="window.location.href='index.html'" class="btn-kembali">
+      ← Kembali ke Halaman Utama
+    </button>
+    <section id="akademik">
+      <h2>10 Format Audio</h2>
+      <div class="audio-cards">
+        <div class="audio-card">
+          <h3>MP3</h3>
+          <audio controls>
+            <source src="audio/sempurna.mp3" type="audio/mpeg" />
+            Browser kamu tidak mendukung pemutar audio.
+          </audio>
+        </div>
+        <div class="audio-card">
+          <h3>WAV</h3>
+          <audio controls>
+            <source src="audio/sempurna.wav" type="audio/wav" />
+            Browser kamu tidak mendukung pemutar audio.
+          </audio>
+        </div>
+        <div class="audio-card">
+          <h3>FLAC</h3>
+          <audio controls>
+            <source src="audio/sempurna.flac" type="audio/flac" />
+            Browser kamu tidak mendukung pemutar audio.
+          </audio>
+        </div>
+        <div class="audio-card">
+          <h3>AAC</h3>
+          <audio controls>
+            <source src="audio/sempurna.aac" type="audio/aac" />
+            Browser kamu tidak mendukung pemutar audio.
+          </audio>
+        </div>
+        <div class="audio-card">
+          <h3>ALAC</h3>
+          <audio controls>
+            <source src="audio/sempurna.m4a" type="audio/alac" />
+            Browser kamu tidak mendukung pemutar audio.
+          </audio>
+        </div>
+        <div class="audio-card">
+          <h3>MKA</h3>
+          <audio controls>
+            <source src="audio/sempurna.mka" type="audio/x-ms-mka" />
+            Browser kamu tidak mendukung pemutar audio.
+          </audio>
+        </div>
+        <div class="audio-card">
+          <h3>AIFF</h3>
+          <audio controls>
+            <source src="audio/sempurna.aiff" type="audio/aiff" />
+            Browser kamu tidak mendukung pemutar audio.
+          </audio>
+        </div>
+        <div class="audio-card">
+          <h3>OGG</h3>
+          <audio controls>
+            <source src="audio/sempurna.ogg" type="audio/ogg" />
+            Browser kamu tidak mendukung pemutar audio.
+          </audio>
+        </div>
+        <div class="audio-card">
+          <h3>AMR</h3>
+          <audio controls>
+            <source src="audio/sempurna.amr" type="audio/amr" />
+            Browser kamu tidak mendukung pemutar audio.
+          </audio>
+        </div>
+        <div class="audio-card">
+          <h3>OPUS</h3>
+          <audio controls>
+            <source src="audio/sempurna.opus" type="audio/opus" />
+            Browser kamu tidak mendukung pemutar audio.
+          </audio>
+        </div>
       </div>
-      <div class="audio-card">
-        <h3>WAV</h3>
-        <audio controls>
-          <source src="audio/sempurna.wav" type="audio/wav" />
-          Browser kamu tidak mendukung pemutar audio.
-        </audio>
-      </div>
-      <div class="audio-card">
-        <h3>FLAC</h3>
-        <audio controls>
-          <source src="audio/sempurna.flac" type="audio/flac" />
-          Browser kamu tidak mendukung pemutar audio.
-        </audio>
-      </div>
-      <div class="audio-card">
-        <h3>AAC</h3>
-        <audio controls>
-          <source src="audio/sempurna.aac" type="audio/aac" />
-          Browser kamu tidak mendukung pemutar audio.
-        </audio>
-      </div>
-      <div class="audio-card">
-        <h3>ALAC</h3>
-        <audio controls>
-          <source src="audio/sempurna.m4a" type="audio/alac" />
-          Browser kamu tidak mendukung pemutar audio.
-        </audio>
-      </div>
-      <div class="audio-card">
-        <h3>MKA</h3>
-        <audio controls>
-          <source src="audio/sempurna.mka" type="audio/x-ms-mka" />
-          Browser kamu tidak mendukung pemutar audio.
-        </audio>
-      </div>
-      <div class="audio-card">
-        <h3>AIFF</h3>
-        <audio controls>
-          <source src="audio/sempurna.aiff" type="audio/aiff" />
-          Browser kamu tidak mendukung pemutar audio.
-        </audio>
-      </div>
-      <div class="audio-card">
-        <h3>OGG</h3>
-        <audio controls>
-          <source src="audio/sempurna.ogg" type="audio/ogg" />
-          Browser kamu tidak mendukung pemutar audio.
-        </audio>
-      </div>
-      <div class="audio-card">
-        <h3>AMR</h3>
-        <audio controls>
-          <source src="audio/sempurna.amr" type="audio/amr" />
-          Browser kamu tidak mendukung pemutar audio.
-        </audio>
-      </div>
-      <div class="audio-card">
-        <h3>OPUS</h3>
-        <audio controls>
-          <source src="audio/sempurna.opus" type="audio/opus" />
-          Browser kamu tidak mendukung pemutar audio.
-        </audio>
-      </div>
-    </div>
-  </section>
+    </section>
+  </body>
+</html>
