--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
     <title>Andriansyah</title>
     <link rel="stylesheet" href="style.css" />
     <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-    />
-    <link
       href="https://fonts.googleapis.com/css2?family=UnifrakturCook&display=swap"
       rel="stylesheet"
     />
@@ -29,10 +25,10 @@
           <a href="#">Akademik</a>
           <ul class="dropdown-menu">
             <li><a href="font.html">Font</a></li>
-            <li><a href="#image">Gambar</a></li>
-            <li><a href="#audio">Audio</a></li>
-            <li><a href="#video">Video</a></li>
-            <li><a href="#animasi">Animasi</a></li>
+            <li><a href="image.html">Gambar</a></li>
+            <li><a href="audio.html">Audio</a></li>
+            <li><a href="video.html">Video</a></li>
+            <li><a href="animasi.html">Animasi</a></li>
           </ul>
         </li>        
         <a href="#contact">Contact</a>
