--- a/image.html
+++ b/image.html
@@ -1,4 +1,16 @@
-<section class="image-gallery" id="gallery">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Gambar</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <button onclick="window.location.href='index.html'" class="btn-kembali">
+    ← Kembali ke Halaman Utama
+  </button>
+  <section class="image-gallery" id="gallery">
     <h2>10 Format Gambar</h2>
     <p class="section-subtitle">
       Berikut adalah contoh 10 format gambar populer:
@@ -47,3 +59,5 @@
       </div>
     </div>
   </section>
+</body>
+</html>
