feat: enhance image and video card styling, update HTML structure, and add Font Awesome icons

--- a/image.html
+++ b/image.html
@@ -19,43 +19,43 @@
     <div class="image-grid">
       <div class="image-card">
         <img src="images/Gambar1.jpg" alt="JPEG" />
-        <p>JPEG</p>
+        <h3>JPEG</h3>
       </div>
       <div class="image-card">
         <img src="images/Gambar1.png" alt="PNG" />
-        <p>PNG</p>
+        <h3>PNG</h3>
       </div>
       <div class="image-card">
         <img src="images/Gambar1.webp" alt="WebP" />
-        <p>WebP</p>
+        <h3>WebP</h3>
       </div>
       <div class="image-card">
         <img src="images/Gambar.gif" alt="GIF" />
-        <p>GIF</p>
+        <h3>GIF</h3>
       </div>
       <div class="image-card">
         <img src="images/Gambar1.svg" alt="SVG" />
-        <p>SVG</p>
+        <h3>SVG</h3>
       </div>
       <div class="image-card">
         <img src="images/Gambar1.avif" alt="AVIF" />
-        <p>AVIF</p>
+        <h3>AVIF</h3>
       </div>
       <div class="image-card">
         <img src="images/Gambar1.bmp" alt="BMP" />
-        <p>BMP</p>
+        <h3>BMP</h3>
       </div>
       <div class="image-card">
         <img src="images/Gambar1.ico" alt="ICO" />
-        <p>ICO</p>
+        <h3>ICO</h3>
       </div>
       <div class="image-card">
         <img src="images/Gambar1.heic" alt="HEIC" />
-        <p>HEIC</p>
+        <h3>HEIC</h3>
       </div>
       <div class="image-card">
         <img src="images/Gambar1.tiff" alt="TIFF" />
-        <p>TIFF</p>
+        <h3>TIFF</h3>
       </div>
     </div>
   </section>
