--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       href="https://fonts.googleapis.com/css2?family=UnifrakturCook&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
   </head>
   <body>
     <nav class="navbar">
@@ -30,7 +34,7 @@
             <li><a href="video.html">Video</a></li>
             <li><a href="animasi.html">Animasi</a></li>
           </ul>
-        </li>        
+        </li>
         <a href="#contact">Contact</a>
       </div>
     </nav>
@@ -137,8 +141,6 @@
       </div>
     </section>
 
-    
-
     <!-- Contact Section -->
     <section class="contact" id="contact">
       <div class="contact-container">
@@ -178,7 +180,7 @@
             <a href="https://instagram.com" target="_blank"
               ><i class="fab fa-instagram"></i
             ></a>
-            <a href="mailto:andri@example.com"
+            <a href="mailto:andri@example.com" target="_blank"
               ><i class="fas fa-envelope"></i
             ></a>
           </div>
