--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a href="#home">Home</a>
         <a href="#about">About</a>
         <li class="dropdown">
-          <a href="#">Akademik</a>
+          <a href="#akademic">Akademik</a>
           <ul class="dropdown-menu">
             <li><a href="font.html">Font</a></li>
             <li><a href="image.html">Gambar</a></li>
