--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <li class="dropdown">
           <a href="#akademic">Akademik</a>
           <ul class="dropdown-menu">
+            <li><a href="#akademic">Akademik</a></li>
             <li><a href="font.html">Font</a></li>
             <li><a href="image.html">Gambar</a></li>
             <li><a href="audio.html">Audio</a></li>
